<resources>
    <string name="app_name">FusionCharge</string>
    <string name="double_press_for_exit">再次点击返回退出程序</string>
    <string name="hint_key_total">共</string>
    <string name="hint_key_electronic_pile">个充电桩</string>
    <string name="hint_key_electronic_gun">个充电枪</string>
    <string name="km">KM</string>
    <string name="yuan">元</string>
    <string name="yuan_du">元&#047;度</string>
    <string name="du">度</string>
    <string name="action_get_code">获取验证码</string>
    <string name="action_get_code_again">重新获取验证码</string>
    <string name="action_get_message_code">获取短信验证码</string>
    <string name="action_next">下一步</string>
    <string name="action_submit">提交</string>
    <string name="action_confirm">确定</string>
    <string name="action_photo">相机</string>
    <string name="action_gallery">照片</string>
    <string name="action_cancel">取消</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_send_comment">发表评价</string>
    <string name="action_reply">回复</string>
    <string name="action_appointment">预约</string>
    <string name="action_complete_appointment">完成预约</string>
    <string name="action_go">直接前往</string>
    <string name="action_guild">开始导航</string>
    <string name="action_cancel_appointment">取消预约</string>
    <string name="action_re_appointment">重新预约</string>
    <string name="action_change_map">切换园区地图</string>
    <string name="action_start_charge">开始充电</string>
    <string name="action_end_and_pay">结束并且支付</string>
    <string name="action_confirm_pay">确认支付</string>
    <string name="action_send_comment_">发布评论</string>
    <string name="action_reset">重置</string>
    <string name="statue">状态</string>
    <string name="statue_free">空闲</string>
    <string name="statue_busy">繁忙</string>
    <string name="statue_charging_pile_open">对外开放</string>
    <string name="statue_online">离线</string>
    <string name="statue_offline">在线</string>
    <string name="statue_direct_electronic">直流</string>
    <string name="statue_alternating_electronic">交流</string>
    <string name="hint">提示</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="input_correct_phone">请输入正确的手机号</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="code_incorrect">验证码格式不正确</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_message_code">请输入短信中的验证码</string>
    <string name="hint_input_new_password">输入新密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_input_search_key">输入关键词查询</string>
    <string name="hint_input_device_num">请输入设备号</string>
    <string name="code_error_hint">错误提示：</string>
    <string name="login">登陆</string>
    <string name="login_type_phone">手机号登陆</string>
    <string name="login_type_worker">员工账号登陆</string>
    <string name="login_type_code">验证码登陆</string>
    <string name="login_regist_account">注册账号</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_error">登录失败</string>
    <string name="regist">注册</string>
    <string name="regist_password_hint">请输入6-2位密码，支持字符a-zA-Z0-9以及英文特殊字符</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_hint">验证码已经发送到您的手机</string>
    <string name="reset_password_no_message">未收到短信验证码？</string>
    <string name="reset_password_input_password">输入密码</string>
    <string name="user_info_icon">头像</string>
    <string name="user_info_name">姓名</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_man">男</string>
    <string name="user_info_female">女</string>
    <string name="user_info_nick_name">昵称</string>
    <string name="user_info_email">邮箱</string>
    <string name="user_info_birthday">出生日期</string>
    <string name="user_info_address">地址</string>
    <string name="user_info_department">部门</string>
    <string name="user_info_phone">电话</string>
    <string name="user_info_no">工号</string>
    <string name="user_info_type">用户类型</string>
    <string name="user_info_w3_account">w3账号</string>
    <string name="user_info_alter_photo">修剪照片</string>
    <string name="home_map">地图</string>
    <string name="home_list">列表</string>
    <string name="home_direct_electronic">直流电</string>
    <string name="home_alternating_electronic">交流电</string>
    <string name="home_go_pay">去支付</string>
    <string name="home_go_charger">去充电</string>
    <string name="home_not_pay_hint">您有一个交易订单未支付</string>
    <string name="home_start_charging">您有一个开启充电的订单</string>
    <string name="home_charging">您的车正在充电</string>
    <string name="home_checking">正在检测充电安全</string>
    <string name="home_checked_fail">检测充电安全失败</string>
    <string name="home_chager_fee">充电费用</string>
    <string name="home_charging_fee_per">充电费：</string>
    <string name="home_charging_service_fee">服务费：</string>
    <string name="home_pay_style">支付方式：微信，支付宝</string>
    <string name="home_appointment_hint">您有一个预约请尽快前往</string>
    <string name="home_my_order">我的订单</string>
    <string name="home_my_account">我的账户</string>
    <string name="home_my_appointment">我的预约</string>
    <string name="home_my_charge">我的充电</string>
    <string name="home_setting">设置</string>
    <string name="home_distance">距离（KM）</string>
    <string name="home_charge_type">方式</string>
    <string name="home_charge_direct">直流快充</string>
    <string name="home_charge_alternating">交流慢充</string>
    <string name="home_charge_direct_">直流：</string>
    <string name="home_charge_alternating_">交流：</string>
    <string name="home_charge_hint_">个空闲</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clear">清空搜索历史</string>
    <string name="charging_pile_detail">充电站详情</string>
    <string name="charging_pile_pics">图片</string>
    <string name="charging_pile_position">桩位</string>
    <string name="charging_pile_comments">评论</string>
    <string name="charging_pile_no">电桩编号：</string>
    <string name="charging_pile_max_power">最大功率：</string>
    <string name="charging_pile_max_electronic">最大电流：</string>
    <string name="charging_pile_max_voltage">最大电压：</string>
    <string name="charging_pile_appointment_warn">由于您恶意预约已超过三次\n您的账号已被锁定</string>
    <string name="score">分</string>
    <string name="electric_gun">充电枪：</string>
    <string name="appoint_charge_choice_time">选择时间</string>
    <string name="appoint_charge_choice_time_title">请选择合适的预约时间段</string>
    <string name="appoint_charge_choice_time_hint">温馨提示：请根据您的实际需要进行预约，恶意预约将受到使用限制</string>
    <string name="appoint_success">预约成功</string>
    <string name="guilding">导航中</string>
    <string name="guilding_charging_pile_no">电桩编号</string>
    <string name="guilding_charging_pile_name">电桩名称</string>
    <string name="guilding_charging_gun">电枪编号</string>
    <string name="guilding_timeout">很抱歉</string>
    <string name="guilding_timeout_hint">您预置的预约时间已超时 请重新预约</string>
    <string name="guilding_reach_target">您已到达目的地附近！</string>
    <string name="guilding_park_map">园区地图</string>
    <string name="guilding_get_location">定位中，稍后再试...</string>
    <string name="guilding_no_end">终点未设置</string>
    <string name="guilding_cancel_appointment_hint">您确定要取消充电预约？</string>
    <string name="guilding_check_not_appointment">您导航目的地与预约中的目的地不同，是否继续导航？</string>
    <string name="scan_charging">充电</string>
    <string name="scan_charging_hint">将充电桩上的二维码放入框内，即可享受充电服务</string>
    <string name="scan_charging_change_keybord">切换至输入设备号充电</string>
    <string name="charging_detail">充电详情</string>
    <string name="charging_detail_place">充电点</string>
    <string name="charging_detail_no">充电桩编号：</string>
    <string name="charging_detail_fee">充电费</string>
    <string name="changing_detail_choice_gun">选择充电枪</string>
    <string name="changing_detail_choice_style">选择充电方式</string>
    <string name="changing_detail_style_electronic">按电量</string>
    <string name="changing_detail_style_money">按金额</string>
    <string name="changing_detail_style_time">按时间</string>
    <string name="changing_detail_style_full">充满</string>
    <string name="changing_detail_input_electronic">请输入充电度数</string>
    <string name="charging_statue">充电状态</string>
    <string name="charging_statue_checking">正在检测安全性....</string>
    <string name="charging_statue_hint">您确定要结束充电去支付？</string>
    <string name="charging_statue_electronic">已充电量</string>
    <string name="charging_statue_fee">充电费用</string>
    <string name="charging_statue_a">电流(A)</string>
    <string name="charging_statue_v">电压(V)</string>
    <string name="charging_statue_kw">功率</string>
    <string name="charging_statue_current">当期电量</string>
    <string name="charging_statue_soc">SOC</string>
    <string name="charging_statue_fail">开始充电失败</string>
    <string name="charging_statue_please_check">请检查桩与车的连接状态....</string>
    <string name="charging_statue_ending">正在结束充电，请耐心等待....</string>
    <string name="charging_statue_end_go_to_pay">您的充电已结束，请前往支付</string>
    <string name="charging_statue_time">充电时长（分）</string>
    <string name="pay">支付</string>
    <string name="pay_electronic">充电量</string>
    <string name="pay_electronic_fee">充电电费</string>
    <string name="pay_service_fee">服务费</string>
    <string name="pay_total">总计</string>
    <string name="pay_choice_pay">选择支付方式</string>
    <string name="pay_balance">余额</string>
    <string name="pay_balance_hint">本账户余额</string>
    <string name="pay_balance_not_enough">您的账户余额不足\n请选择其他方式付款！</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_wechat_hint">推荐有微信钱包的用户使用</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_alipay_hint">推荐有支付宝账号的用户使用</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_error">不好！您的订单支付出现异常啦</string>
    <string name="pay_pay_again">请重新支付</string>
    <string name="pay_try_again">再试试</string>
    <string name="pay_complete">支付完成</string>
    <string name="pay_complete_hint">快开着你的小马达去兜风吧</string>
    <string name="pay_complete_comment_hint">请对此次充电作出评价</string>
    <string name="pay_complete_score">电桩评分</string>
    <string name="send_comment">发布评论</string>
    <string name="send_comment_charge_electronic">充电量</string>
    <string name="send_comment_electronic_fee">电费</string>
    <string name="send_comment_service_fee">服务费</string>
    <string name="send_comment_total">小计</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appoint_charge">预约充电</string>
    <string name="appoint_time">15分钟</string>
    <string name="appoint_15m">请您在15分钟内到达</string>
    <string name="appoint_30m">请您在30分钟内到达</string>
    <string name="appoint_1h">请您在1小时内到达</string>
    <string name="appoint_2h">请您在2小时内到达</string>
    <string name="status_fault">故障</string>
    <string name="time_30m">30分钟</string>
    <string name="time_1h">1小时</string>
    <string name="time_2h">2小时</string>
    <string name="now_have_appointed">您当前已有预约设备</string>
    <string name="charge_detail">充电详情</string>
    <string name="charge_station_name">充电点：</string>
    <string name="charge_zhuang_number">充电桩编号：</string>
    <string name="charge_cost">充电费：</string>
    <string name="charge_service_cost">服务费：</string>
    <string name="choose_charge_gun">选择充电枪</string>
    <string name="choose_charge_style">选择充电方式</string>
    <string name="with_power">按电量</string>
    <string name="with_money">按金额</string>
    <string name="with_time">按时间</string>
    <string name="charge_enouth">充满</string>
    <string name="please_enter_charge_count">  请输入充电度数</string>
    <string name="start_chareg">开始充电</string>
    <string name="choose_charge_full">  已选择充满</string>
    <string name="charge_capture_hint">将充电桩上的二维码放入框内，即可享受充电服务</string>
    <string name="charge">充电</string>
    <string name="change_enter_erweima_charge">切换至输入二维码编号充电</string>
    <string name="sure">确定</string>
    <string name="please_input_erweima_number">请输入二维码编号</string>
    <string name="no_charge_gun_cannot_charge">没有获取到充电枪，无法充电。</string>
</resources>