<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_20"
    android:background="@drawable/little_corner_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/appoint_charge_choice_time"
        android:textColor="@color/black_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/app_blue" />

    <TextView
        android:id="@+id/time_15m_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_48"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/appoint_time" />

    <View
        android:id="@+id/cut_line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:background="@color/app_blue"
        android:visibility="gone" />

    <TextView
        android:id="@+id/time_30m_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_48"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/time_30m" />

    <View
        android:id="@+id/cut_line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:background="@color/app_blue"
        android:visibility="gone" />

    <TextView
        android:id="@+id/time_1h_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_48"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/time_1h" />

    <View
        android:id="@+id/cut_line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:background="@color/app_blue"
        android:visibility="gone" />

    <TextView
        android:id="@+id/time_2h_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_48"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/time_2h" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/text_gray" />

    <TextView
        android:id="@+id/sure_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_20"
        android:text="@string/action_confirm"
        android:textColor="@color/black_bg" />
</LinearLayout>
