<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--顶部未支付提示-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:id="@+id/rl_not_pay"
        >
        <TextView
           style="@style/text_normal"
            android:text="@string/home_not_pay_hint"
            android:layout_centerVertical="true"
            />
        
        <TextView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
           style="@style/text_normal"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:background="@drawable/cb_on"
            android:text="@string/home_go_pay"
            android:gravity="center"
            android:textColor="@color/app_blue"
            android:id="@+id/tv_pay"
            />
    </RelativeLayout>

    <include layout="@layout/layout_top_hint"
        android:visibility="gone"
        />

    <!--底部详情-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_bottom_detail"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_15"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                   style="@style/text_normal"
                    android:text="园区充电桩"
                    />
                <TextView
                    android:layout_marginLeft="3dp"
                    style="@style/text_normal"
                    android:text="4.9"
                    android:textColor="@color/app_blue"
                    />
                <TextView
                   style="@style/text_normal"
                    android:text="@string/score"
                    android:textColor="@color/app_blue"
                    />
                <ImageView
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/pop_ic_open"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    style="@style/text_normal"
                    android:textSize="12dp"
                    android:text="@string/statue_charging_pile_open"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_normal"
                    android:text="南京市雨花台区花神大道117号"
                    />
                <TextView
                    android:layout_alignParentRight="true"
                    style="@style/text_normal"
                    android:text="14.6KM"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                >
                <TextView
                  style="@style/text_normal"
                    android:text="@string/hint_key_total"
                    />
                <TextView
                   style="@style/text_normal"
                    android:textColor="@color/app_blue"
                    android:text="1"
                    />
                <TextView
                    style="@style/text_normal"
                    android:text="@string/hint_key_electronic_pile"
                    />
                <TextView
                    android:layout_marginLeft="@dimen/dp_30"
                    style="@style/text_normal"
                    android:text="@string/hint_key_total"
                    />
                <TextView
                    style="@style/text_normal"
                    android:textColor="@color/app_blue"
                    android:text="3"
                    />
                <TextView
                    style="@style/text_normal"
                    android:text="@string/hint_key_electronic_gun"
                    />
                <TextView
                    android:layout_marginLeft="@dimen/dp_30"
                    style="@style/text_normal"
                    android:text="@string/hint_key_total"
                    />
                <TextView
                    style="@style/text_normal"
                    android:textColor="@color/app_blue"
                    android:text="10"
                    />
                <TextView
                    style="@style/text_normal"
                    android:text="@string/statue_free"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="10dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/pop_ic_back"
                    android:paddingRight="15dp"
                    />
            </LinearLayout>
            <View
                style="@style/view_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:id="@+id/ll_fee"
                >
                <TextView
                   style="@style/text_normal"
                    android:text="@string/home_charging_fee_per"
                    />
                <TextView
                   style="@style/text_normal"
                    android:text="0.0000元/度~0.0030元/度"/>
                <ImageView
                    android:layout_marginLeft="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/pop_ic_ask"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                   style="@style/text_normal"
                    android:text="@string/home_charging_service_fee"
                    />
                <TextView
                   style="@style/text_normal"
                    android:text="1.6000元/度"
                    />
            </LinearLayout>
            <View
               style="@style/view_line"
                android:layout_marginTop="5dp"
                />
            <TextView
               style="@style/text_normal"
                android:layout_marginTop="5dp"
                android:text="@string/home_pay_style"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/pop_ic_guide"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            />
    </RelativeLayout>

</RelativeLayout>