<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:background="@mipmap/default_select_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/phone_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/login_type_phone" />

    <View
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line" />

    <TextView
        android:id="@+id/worker_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/login_type_worker" />

    <View
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line" />

    <TextView
        android:id="@+id/code_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/login_type_code" />
</LinearLayout>
